Fixes addtional white space bug

--- a/styles.css
+++ b/styles.css
@@ -209,11 +209,10 @@ footer {
     margin-bottom: 50px;
 }
 
-.spacing {
+.main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
 }
 
 footer {
